--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
 
 
                         <input type="checkbox" id="button-checkbox">
-                        <label for="button-checkbox" class="text-font text-list">100g Rohzucker100g Rohzucker100g Rohzucker100g Rohzucker100g Rohzucker100g Rohzucker100g Rohzucker</label>
+                        <label for="button-checkbox" class="text-font text-list">100g Rohzucker100g Rohzucker100g
+                            Rohzucker100g Rohzucker100g Rohzucker100g Rohzucker100g Rohzucker</label>
 
                         <div class="popup" onclick="myFunction()">
                             <button onclick="createReminder()">i</button>
@@ -179,12 +180,9 @@
                         <br/>
 
 
-
-
-
                         <div class="checkbox-container">
                             <input type="checkbox" id="myCheckbox">
-                            <span class="editable-label" contenteditable="false" id="myLabel">Click to edit</span>
+                            <span class="editable-label text-font text-list" contenteditable="false" id="myLabel">Click to edit</span>
 
                             <div class="popup" onclick="myFunction()">
                                 <button onclick="createReminder()">i</button>
@@ -220,17 +218,6 @@
                         <script src="script.js"></script>
 
 
-
-
-
-
-
-
-
-
-
-
-
                         <input type="checkbox" id="button-checkbox">
                         <label for="button-checkbox" class="text-font text-list">¼TL Salz</label><br/>
 
@@ -517,10 +504,10 @@
                         <label for="button-checkbox" class="text-font text-list">75g Butter</label><br/>
 
                     </div>
+
+                </div>
 
             </div>
-
-        </div>
     </section>
 </main>
 <footer>
