Implemented "Clear Completed" function.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <section>
         <div class="flex-container">
             <div class="flex-container-fixed">
-
                 <div class="toolbar">
                     <button class="color-main" onclick="createReminder()">New Reminder</button>
                     <div class="spacer-gap"></div>
@@ -32,7 +31,7 @@
                     <div class="spacer-elements"></div>
                     <button class="button-margin-left" onclick="createReminder()">Sort by Date</button>
                     <div class="spacer-fill"></div>
-                    <button class="button-margin-left color-caution" onclick="createReminder()">Clear Completed</button>
+                    <button class="button-margin-left color-caution" onclick="clearCompletedReminders()">Clear Completed</button>
                 </div>
             </div>
 
