--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="flex-container">
             <div class="flex-container-fixed">
                 <div class="toolbar">
-                    <button class="color-main" onclick="createReminder()">New Reminder</button>
+                    <button id="toolbar-new-reminder" class="color-main" onclick="createReminder(event)">New Reminder</button>
                     <div class="spacer-gap"></div>
                     <button onclick="createReminder()">Show Important</button>
                     <div class="spacer-elements"></div>
@@ -36,16 +36,15 @@
             </div>
 
             <div class="flex-container-scroll">
-                <div class="flex-container-elements">
+                <div class="flex-container-elements" id="flex-container-elements">
 
                     <div class="list-group" id="list-group">
                         <input type="checkbox" id="button-checkbox">
-                        <label for="button-checkbox" class="text-font text-title">Schoko-Cookies</label><br/>
-                        <button class="button-margin-bottom" onclick="createReminder()">Create Reminder</button>
+                        <label for="button-checkbox" class="text-font text-title">Group Title</label><br/>
+                        <button class="button-margin-bottom" onclick="createReminder()">New Reminder</button>
                         <br/>
                     </div>
 
-
                     <div class="list-group">
                     </div>
                     <div class="list-group">
@@ -58,7 +57,6 @@
                     </div>
                     <div class="list-group">
                     </div>
-
 
                 </div>
             </div>
