--- a/index.html
+++ b/index.html
@@ -66,5 +66,11 @@
         <br/>
     </div>
 </script>
+
+<script>
+    // Autosave interval (e.g., every 30 seconds)
+    const autosaveInterval = 30000; // 30,000 milliseconds = 30 seconds
+    setInterval(saveReminders, autosaveInterval);
+</script>
 </body>
 </html>
