--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     </button>
                 </div>
             </div>
-            <div class="flex-container-scroll">
-                <div class="flex-container-elements" id="flex-container-elements"></div>
+            <div class="flex-container-scroll" id="flex-container-elements">
+                <!-- Dynamic content will be added here -->
             </div>
     </section>
 </main>
@@ -43,7 +43,7 @@
     <div class="list-group">
         <input type="checkbox" id="button-checkbox-{{id}}">
         <label for="button-checkbox-{{id}}" class="text-font text-title">Group Title</label><br/>
-        <button class="button-margin-bottom" data-id="{{id}}" onclick="createReminder(event)">New Reminder</button>
+        <button class="button-margin-bottom" data-action="create-reminder" data-id="{{id}}">New Reminder</button>
         <br/>
     </div>
 </script>
@@ -66,11 +66,3 @@
         <br/>
     </div>
 </script>
-
-<script>
-    // Autosave interval (e.g., every 30 seconds)
-    const autosaveInterval = 30000; // 30,000 milliseconds = 30 seconds
-    setInterval(saveReminders, autosaveInterval);
-</script>
-</body>
-</html>
