--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
         <input type="checkbox" id="checkbox-{{id}}">
         <span class="editable-label text-font text-list" id="label-{{id}}" contenteditable="false">New Reminder</span>
         <input type="date" id="date-{{id}}" class="date-input">
-        <button id="button-{{id}}" onclick="reminderManager.toggleTextColor(this)">i</button>
+        <button id="button-{{id}}" onclick="reminderManager.toggleTextColorAndLabel(this)">!</button>
         <br/>
     </div>
 </script>
+
+
 
 
 <script>
