"Show Important" button is now orange on click.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                     <div class="spacer-elements"></div>
                     <button class="button-margin-left" id="sort-by-date">Sort by Date</button>
                     <div class="spacer-fill"></div>
-                    <button class="button-margin-left color-caution" id="clear-completed-reminders">Clear Completed
-                    </button>
+                    <button class="button-margin-left color-caution" id="clear-completed-reminders">Clear Completed</button>
                 </div>
             </div>
             <div class="flex-container-scroll" id="flex-container-elements">
