--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="spacer-elements"></div>
                     <button class="button-margin-left" id="sort-by-date">Sort by Date</button>
                     <div class="spacer-fill"></div>
-                    <button class="button-margin-left color-caution" id="clear-reminders">Clear Reminders</button>
+                    <button class="button-margin-left color-caution inactive" id="clear-reminders">Clear Reminders</button>
                 </div>
             </div>
             <div class="flex-container-scroll" id="flex-container-elements">
