Fixed pasting bug, where text would become unresponsive.

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <div class="flex-container">
             <div class="flex-container-fixed">
                 <div class="toolbar">
-                    <button id="toolbar-new-reminder" class="color-main">New Reminder</button>
+                    <button id="toolbar-new-reminder" class="color-main">New</button>
                     <div class="spacer-gap"></div>
-                    <button id="show-important">Show Important</button>
+                    <button id="show-important">Important</button>
                     <div class="spacer-elements"></div>
-                    <button class="button-margin-left" id="sort-by-date">Sort by Date</button>
+                    <button class="button-margin-left" id="sort-by-date">Date</button>
                     <div class="spacer-fill"></div>
-                    <button class="button-margin-left color-caution inactive" id="clear-reminders">Clear Reminders</button>
+                    <button class="button-margin-left color-caution inactive" id="clear-reminders">Clear</button>
                 </div>
             </div>
             <div class="flex-container-scroll" id="flex-container-elements">
