Removed logic / controllers completely.

--- a/source/public/index.html
+++ b/source/public/index.html
@@ -7,7 +7,7 @@
     <script src="./libraries/handlebars.min.js" defer></script>
     <script src="./scripts/utils/noteService.js" defer></script>
     <script src="./scripts/controllers/userControllers.js" defer></script>
-    <script src="./scripts/model/route.js" defer></script>
+    <script src="./scripts/model/routes.js" defer></script>
     <script src="./scripts/model/store.js" defer></script>
     <script src="./scripts/utils/classes.js" defer></script>
     <script src="./scripts/utils/functions.js" defer></script>
@@ -57,5 +57,3 @@
 </script>
 </body>
 </html>
-
-test
